--- a/packages/design/.eslintrc
+++ b/packages/design/.eslintrc
@@ -1,3 +1,10 @@
 {
-  "extends": ["eslint-config-psfe"]
+  "extends": ["eslint-config-psfe"],
+  "settings": {
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true
+      }
+    }
+  }
 }
