chore: remove lerna

--- a/packages/demo/tsconfig.json
+++ b/packages/demo/tsconfig.json
@@ -1,11 +1,6 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["."],
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@": ["./"]
-    },
-    "outDir": "./dist"
+    "baseUrl": "."
   }
 }
