--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "root",
   "private": true,
-  "useWorkspaces": true,
+  "scripts": {
+    "preinstall": "npx only-allow pnpm"
+  },
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
-    "lerna": "^5.3.0"
+    "eslint-config-psfe": "^1.0.0"
   }
 }
