--- a/packages/demo/.eslintrc
+++ b/packages/demo/.eslintrc
@@ -1,11 +1,10 @@
 {
-  "extends": [
-    "eslint-config-psfe"
-  ],
+  "extends": ["eslint-config-psfe"],
   "settings": {
     "import/resolver": {
-      "typescript": {
-        "alwaysTryTypes": true
+      "alias": {
+        "map": [["@", "./packages/demo/components"]], // 相对于项目根目录
+        "extensions": [".tsx"]
       }
     }
   }
