--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -18,18 +18,11 @@
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
     "babel-loader": "^8.2.5",
     "core-js": "^3.25.1",
     "css-loader": "^6.7.1",
-    "eslint": "^8.23.0",
-    "eslint-config-psfe": "^1.0.0",
-    "eslint-import-resolver-typescript": "^3.5.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint": "^8.28.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.7.1",
     "sass": "^1.54.9",
@@ -41,9 +34,9 @@
     "webpack-dev-server": "^4.11.0"
   },
   "dependencies": {
+    "pivot-design": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.0",
-    "pivot-design": "workspace:*"
+    "react-router-dom": "^6.4.0"
   }
 }
