--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -12,12 +12,10 @@
   "devDependencies": {
     "classnames": "^2.3.2",
     "@types/react": "^18.0.21",
-    "eslint-import-resolver-typescript": "^3.5.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint": "^8.23.0",
-    "eslint-config-psfe": "^1.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "pivot-design-props": "workspace:*"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
