--- a/packages/design/tsconfig.json
+++ b/packages/design/tsconfig.json
@@ -3,6 +3,10 @@
   "include": ["."],
   "exclude": ["lib"],
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["components/*"]
+    },
     "outDir": "lib"
   }
 }
