feat: theme change & mdx docs

--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^4.11.0"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.1.5",
     "pivot-design": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
