--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Deploy to github pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.PPTIST }}
+          github_token: ${{ secrets.node }}
           commit_message: deploy to github pages
           publish_dir: ./packages/demo/dist
