--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@types/node": "^18.7.18",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
