--- a/packages/demo/.eslintrc
+++ b/packages/demo/.eslintrc
@@ -3,7 +3,7 @@
   "settings": {
     "import/resolver": {
       "alias": {
-        "map": [["@", "./packages/demo/components"]], // 相对于项目根目录
+        "map": [["@", "./packages/demo/src"]], // 相对于项目根目录
         "extensions": [".tsx"]
       }
     }
