--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -40,6 +40,7 @@
     "babel-plugin-prismjs": "^2.1.0",
     "pivot-design": "workspace:*",
     "prismjs": "^1.29.0",
+    "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0"
