feat: icon feature

--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -16,7 +16,9 @@
     "pivot-design-props": "workspace:*"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-svg": "^16.1.4"
   }
 }
