feat: input feat

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,16 @@
   "editor.formatOnSave": true, // optional
   "editor.formatOnSaveMode": "file",
   "[typescriptreact]": {
-    "editor.defaultFormatter": "rvest.vs-code-prettier-eslint"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[scss]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "prettier.requireConfig": false,
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   } // required to format on save
 }
