--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -39,6 +39,7 @@
     "@mdx-js/loader": "^2.1.5",
     "babel-plugin-prismjs": "^2.1.0",
     "pivot-design": "workspace:*",
+    "pivot-design-icon": "workspace:*",
     "prismjs": "^1.29.0",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
