--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -13,7 +13,8 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.9",
     "classnames": "^2.3.2",
-    "pivot-design-props": "workspace:*"
+    "pivot-design-props": "workspace:*",
+    "pivot-design-icon": "workspace:*"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
