--- a/packages/design-icon/package.json
+++ b/packages/design-icon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pivot-design",
+  "name": "pivot-design-icon",
   "version": "0.0.1",
   "description": "a react component library by Pivot Studio",
   "main": "index.ts",
@@ -13,13 +13,10 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.9",
     "classnames": "^2.3.2",
-    "pivot-design-props": "workspace:*",
-    "pivot-design-icon": "workspace:*"
+    "pivot-design-props": "workspace:*"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-svg": "^16.1.4"
+    "react-dom": "^18.2.0"
   }
 }
