fix: fix pnpm version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Install and Build
         run: |
-          npm install pnpm -g
+          npm install pnpm@7 -g
           pnpm install
           cd ./packages/demo && npm run build
 
