--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@mdx-js/loader": "^2.1.5",
     "babel-plugin-prismjs": "^2.1.0",
+    "gsap": "^3.11.5",
     "pivot-design": "workspace:*",
     "pivot-design-icon": "workspace:*",
     "prismjs": "^1.29.0",
