--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "husky": "^8.0.2"
   },
   "dependencies": {
-    "core-js": "^3.25.1"
+    "core-js": "^3.25.1",
+    "gsap": "^3.12.2"
   }
 }
