--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: deploy
 
 on:
   push:
-    branches: [master]
+    branches: [develop]
 
 jobs:
   deploy:
@@ -13,7 +13,7 @@ jobs:
       - name: Use Node.js v16.x
         uses: actions/setup-node@v1
         with:
-          node-version: '16.x'
+          node-version: "16.x"
 
       - name: Install and Build
         run: |
