feat: initialize ApiDocs plugin

--- a/packages/demo/tsconfig.json
+++ b/packages/demo/tsconfig.json
@@ -4,7 +4,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "target": "ESNext",
+    "noEmitOnError": false
   },
   "exclude": ["loaders"]
 }
