--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -5,20 +5,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development --open --hot",
+    "start": "webpack serve --mode development --hot",
     "build": "webpack  --mode production"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/parser": "^7.22.7",
+    "@babel/plugin-transform-react-jsx": "^7.22.5",
     "@babel/preset-env": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@types/babel__core": "^7.20.1",
     "@types/babel__helper-plugin-utils": "^7.10.0",
+    "@types/babel__parser": "^7.1.1",
     "@types/node": "^18.7.18",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.20",
@@ -40,7 +42,6 @@
   },
   "dependencies": {
     "@babel/helper-plugin-utils": "^7.22.5",
-    "@babel/parser": "^7.22.7",
     "@mdx-js/loader": "^2.1.5",
     "@types/babel-core": "^6.25.7",
     "babel": "^6.23.0",
