feat: show ApiTable

--- a/packages/demo/loaders/tsconfig.json
+++ b/packages/demo/loaders/tsconfig.json
@@ -5,6 +5,7 @@
       "@/*": ["src/*"],
     },
     "target": "ESNext",
+    "module": "CommonJS",
     "noEmitOnError": false,
     "allowSyntheticDefaultImports": true
   },
