--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -6,6 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode development --hot",
+    "start:loader": "concurrently \"pnpm start\" \"pnpm loader:dev\"",
+    "loader:dev": "cd ./loaders && tsc -w",
     "build": "webpack  --mode production"
   },
   "keywords": [],
@@ -26,6 +28,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
+    "concurrently": "^8.2.0",
     "core-js": "^3.25.1",
     "css-loader": "^6.7.1",
     "eslint": "^8.28.0",
