--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "start": "npm run build:props && cd packages/demo && npm run start",
-    "build:props": "node ./scripts/build_props.mjs"
+    "start": "npm run build:props && npm run build:catalog && cd packages/demo && npm run start",
+    "build:props": "node ./scripts/build_props.mjs",
+    "build:catalog": "node ./scripts/build_catalog.mjs"
   },
   "workspaces": [
     "packages/*"
