--- a/packages/design/tsconfig.json
+++ b/packages/design/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "include": ["."],
-  "exclude": ["lib"],
+  "exclude": ["lib",".*"],
   "compilerOptions": {
     "baseUrl": ".",
     "outDir": "lib"
