--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "start": "cd packages/demo && npm run start"
+    "start": "cd packages/demo && npm run start",
+    "start:loader": "pnpm --filter demo start:loader"
   },
   "workspaces": [
     "packages/*"
