--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "@mdx-js/loader": "^2.1.5",
-    "@mdx-js/runtime": "^1.6.22",
+    "@mdx-js/react": "^2.3.0",
     "babel-plugin-prismjs": "^2.1.0",
     "gsap": "^3.11.5",
     "pivot-design": "workspace:*",
