--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -10,6 +10,7 @@
   "author": "psfe",
   "license": "ISC",
   "devDependencies": {
+    "@types/prop-types": "^15.7.5",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.9",
     "classnames": "^2.3.2",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-svg": "^16.1.4"
