--- a/packages/design-icon/.eslintrc
+++ b/packages/design-icon/.eslintrc
@@ -1,11 +1,3 @@
 {
-  "extends": ["eslint-config-psfe"],
-  "settings": {
-    "import/resolver": {
-      "alias": {
-        "map": [["@", "./packages/design/components"]], // 相对于项目根目录
-        "extensions": [".tsx"]
-      }
-    }
-  }
+  "extends":["eslint-config-psfe"]
 }
