--- a/packages/demo/.eslintrc
+++ b/packages/demo/.eslintrc
@@ -1,7 +1,5 @@
 {
   "extends": ["eslint-config-psfe"],
-  "import/extensions": 0,
-  "import/no-unresolved": 0,
   "settings": {
     "import/resolver": {
       "alias": {
@@ -9,5 +7,9 @@
         "extensions": [".tsx", ".ts"]
       }
     }
+  },
+  "rules": {
+    "import/extensions": 0,
+    "import/no-unresolved": 0
   }
 }
