--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/mdast": "^4.0.0",
     "@types/node": "^18.7.18",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.20",
@@ -27,10 +28,13 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.7.1",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "typescript": "^4.8.3",
+    "unified": "^11.0.3",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0"
