--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -14,11 +14,12 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.9",
     "classnames": "^2.3.2",
-    "pivot-design-props": "workspace:*",
-    "pivot-design-icon": "workspace:*"
+    "pivot-design-icon": "workspace:*",
+    "pivot-design-props": "workspace:*"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@monaco-editor/react": "^4.5.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
