--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -5,24 +5,42 @@
   "main": "index.ts",
   "scripts": {
     "watch": "rm -rf ./lib && tsc -w",
-    "build": "rm -rf lib && tsc"
+    "build": "webpack --mode production"
   },
   "author": "psfe",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/prop-types": "^15.7.5",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.9",
+    "babel-loader": "^8.2.5",
     "classnames": "^2.3.2",
+    "core-js": "^3.25.1",
+    "css-loader": "^6.7.1",
     "pivot-design-icon": "workspace:*",
-    "pivot-design-props": "workspace:*"
+    "pivot-design-props": "workspace:*",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.54.9",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.8.3",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@monaco-editor/react": "^4.5.2",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "raw-loader": "^4.0.2",
     "react-svg": "^16.1.4"
+  },
+  "peerDependencies": {
+    "react": ">=17",
+    "react-dom": ">=17"
   }
 }
