feat: 抽离单多模型editor&弃用useControlled&useLocalStorage

--- a/packages/design/tsconfig.json
+++ b/packages/design/tsconfig.json
@@ -4,6 +4,7 @@
   "exclude": ["lib", ".*"],
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "lib"
+    "outDir": "lib",
+    "noPropertyAccessFromIndexSignature": false
   }
 }
