--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
       "node_modules",
     ],
     "compilerOptions": {
-      "suppressImplicitAnyIndexErrors": true,
       "experimentalDecorators": true,
       /* Visit https://aka.ms/tsconfig.json to read more about this file */
       /* Basic Options */
@@ -46,7 +45,7 @@
       "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
       "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
       "noUncheckedIndexedAccess": true, /* Include 'undefined' in index signature results */
-      "noPropertyAccessFromIndexSignature": true, /* Require undeclared properties from index signatures to use element accesses. */
+      "noPropertyAccessFromIndexSignature": false, /* 打开后未知字段只能通过方括号取值 Require undeclared properties from index signatures to use element accesses. */
       /* Module Resolution Options */
       "moduleResolution": "node", /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
       // "baseUrl": "./",                             /* Base directory to resolve non-absolute module names. */
