--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@babel/parser": "^7.21.2",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@types/babel__core": "^7.20.2",
+    "@typescript-eslint/parser": "^6.4.1",
     "babel-plugin-jsx": "^1.2.0",
     "es-dirname": "^0.1.0",
     "eslint-config-psfe": "1.0.5",
-    "@typescript-eslint/parser": "^6.4.1",
-    "husky": "^8.0.2"
+    "husky": "^8.0.2",
+    "prettier": "^2.8.8"
   },
   "dependencies": {
     "core-js": "^3.25.1",
